# ners570f21-Lab06

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  cmake.md  coo.hpp  testing.md
.github/workflows/: c-cpp.yml  cmake.yml
cmake/: SpMV-0.1.0-Darwin.sh  add_unit_test.cmake
doc/: abstractFactory.rst  cmake.md  testing.md  uml.md
doc/doxygen/: config
doc/resources/designPatterns/: behavioral.uml  creational.uml  structural.uml
doc/resources/umlDiagrams/: abstractFactory.uml  builderPattern.uml  classDiagram.uml  stateDiagram.uml
doc/sphinx/source/: conf.py  index.rst
doc/sphinx/source/developerDocs/: cmake.rst  designPatterns.rst  index.rst  testing.rst  umlDiagram.rst
doc/sphinx/source/examples/: index.rst
doc/sphinx/source/theoryManual/: index.rst
doc/sphinx/source/userManual/: index.rst
src/: BCRS.cpp  BCRS.hpp  BCRS_solo.hpp  CMakeLists.txt  COO.cpp  COO.hpp  CRS.cpp  CRS.hpp  ELLPACK.cpp  ELLPACK.hpp  JDS.cpp  JDS.hpp  SparseMatrix.cpp  SparseMatrix.hpp  SparseMatrix_COO.cpp  SparseMatrix_COO.hpp  crs.hpp  hello.cpp  hello.hpp  pythonWrap.cpp  pythonWrap.hpp  test_BCRS_solo.cpp
test/: .gitignore  CMakeLists.txt  README.md  hello_test.cpp  readme.md  run_tests.sh  testHello.cpp  testSparseMaVec_BCRS.cpp  testSparseMatVec_COO.cpp  testSparseMatVec_CRS.cpp  testSparseMatVec_ELLPACK.cpp  testSparseMatrix.cpp  testSparseMatrix_COO.cpp  testSparseMatrix_JDS.cpp  test_CRS.cpp  test_another_example.cpp  test_example.cpp  test_matrix_format_BCRS.cpp  test_matrix_format_COO.cpp  test_matrix_format_CRS.cpp  test_matrix_format_ELLPACK.cpp  test_matrix_format_JDS.cpp  unit_test_framework.h
test/python/: test_BCRS.py  test_COO.py  test_CRS.py  test_ELLPACK.py
